# cautious-carnival

./: .gitignore  Cargo.toml  README.md
examples/: demo.rs  hello_circle.rs
src/: lib.rs  text.rs
src/animation/: mod.rs
src/encoder/: mod.rs
src/math/: mod.rs
src/mobject/: mod.rs
src/renderer/: mod.rs
src/scene/: mod.rs
