[package]
name = "cautious-carnival"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"

description = "A manim inspired crate"
license = "GPL-3.0"
repository = "https://github.com/himanshm/cautious-carnival"
homepage = "https://github.com/himanshm/cautious-carnival"
documentation = "https://docs.rs/cautious-carnival"
readme = "README.md"

keywords = ["manim", "animation", "math", "graphics", "visualization"]
categories = ["graphics", "rendering"]

[dependencies]
anyhow = "1.0.103"
cosmic-text = "0.19.0"
ffmpeg-sidecar = "2.5.2"
glam = "0.33.1"
image = "0.25.10"
kurbo = "0.13.1"
peniko = "0.4"
pollster = "0.4.0"
rayon = "1.12.0"
vello = "0.9.0"
wgpu = "0.19.1"      # compatible with vello 0.9
