[package]
name = "cautious-carnival"
version = "0.1.0"
edition = "2021"
authors = ["Himansh Mewada <himanshmewada06@atomicmail.io>"]
license = "GPL-3.0"
description = "A programmable mathematical animation engine — a Rust replacement for Manim."
repository = "https://github.com/himanshm/cautious-carnival"
keywords = ["animation", "math", "rendering", "manim", "graphics"]
categories = ["graphics", "multimedia::video", "visualization"]
readme = "README.md"
exclude = ["/examples", "/tests", "/.github"]

[features]
default = ["svg"]
# SVG renderer (always-on, zero-dep)
svg = []
# Optional: raster renderer via `image` + `tiny-skia`
raster = ["dep:tiny-skia", "dep:image"]
# Optional: video output via `ffmpeg-next`
video = ["dep:ffmpeg-next"]
# Optional: parallel frame rendering
parallel = ["dep:rayon"]

[dependencies]
# Core has zero required dependencies by default — keeps the crate embeddable.
# Optional backends are pulled in only when the corresponding feature is enabled.

# Raster backend
tiny-skia = { version = "0.11", optional = true }
image = { version = "0.25", optional = true, default-features = false, features = ["png"] }

# Video backend
ffmpeg-next = { version = "7.0", optional = true }

# Parallel rendering
rayon = { version = "1.10", optional = true }

[dev-dependencies]
# Used only by examples / doc-tests
tempfile = "3.10"

[lib]
name = "cautious_carnival"
path = "src/lib.rs"

[[example]]
name = "hello_circle"
path = "examples/hello_circle.rs"
required-features = ["svg"]

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
